# iced-markup

./: .gitignore  Cargo.toml  README.md  note.md  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  future.md  index.md  installation.md  logic.md  usage.md
examples/: counter.rs
src/: attribute.rs  codegen.rs  lib.rs  node.rs  parser.rs
tests/: advanced_test.rs  integration_test.rs
